bootstrap/cluster-resources/in-cluster/codefresh-round3-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: codefresh-round3
spec: {}
status: {}
