bootstrap/cluster-resources/in-cluster/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: master
  creationTimestamp: null
  name: codefresh-master
  namespace: codefresh
spec:
  ingressClassName: nginx
  rules:
  - host: codefresh-csdp-poc-bolt.net
status:
  loadBalancer: {}
